--- a/records/templates/base.html
+++ b/records/templates/base.html
@@ -21,6 +21,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'category_list' %}">Categories</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'record_sale' %}">Record Sale</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'daily_sales' %}">Daily Sales</a>
+                    </li>
                     <!-- Add more navigation items as needed -->
                 </ul>
             </div>
