--- a/records/templates/base.html
+++ b/records/templates/base.html
@@ -27,6 +27,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'daily_sales' %}">Daily Sales</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'record_expense' %}">Record Expense</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'daily_summary' %}">Daily Summary</a>
+                    </li>
                     <!-- Add more navigation items as needed -->
                 </ul>
             </div>
