--- a/records/templates/records/add_product.html
+++ b/records/templates/records/add_product.html
@@ -1,6 +1,14 @@
+{% extends 'base.html' %}
+
+{% block title %}
+    Add Product
+{% endblock %}
+
+{% block content %}
 <h2>Add Product</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Save</button>
 </form>
+{% endblock %}
