--- a/records/templates/records/product_detail.html
+++ b/records/templates/records/product_detail.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1>{{ product.name }}</h1>
     <p>Description: {{ product.description }}</p>
-    <p>Price: ${{ product.price }}</p>
+    <p>Price: Tsh{{ product.price }}</p>
     <p>Quantity Available: {{ product.quantity_available }}</p>
     <p>Category: <a href="{% url 'category_detail' product.category.pk %}">{{ product.category.name }}</a></p>
     <a href="{% url 'product_list' %}">Back to Products</a>
