--- a/records/templates/base.html
+++ b/records/templates/base.html
@@ -33,6 +33,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'daily_summary' %}">Daily Summary</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'reservation_list' %}">Reservations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register_reservation' %}">Add Reservation</a>
+                    </li>
+
                     <!-- Add more navigation items as needed -->
                 </ul>
             </div>
