--- a/records/templates/records/daily_sales.html
+++ b/records/templates/records/daily_sales.html
@@ -1,6 +1,3 @@
-
-
-
 {% extends 'base.html' %}
 
 {% block title %}
@@ -15,6 +12,8 @@
                 <th>Product</th>
                 <th>Quantity Sold</th>
                 <th>Sale Amount</th>
+                <th>Cost Price</th>
+                <th>Profit</th>
             </tr>
         </thead>
         <tbody>
@@ -23,8 +22,11 @@
                     <td>{{ sale.product }}</td>
                     <td>{{ sale.quantity_sold }}</td>
                     <td>{{ sale.sale_price }}</td>
+                    <td>{{ sale.product.price_bought }}</td>  <!-- Assuming the cost price is stored in the Product model -->
+                    <td>{{ sale.profit }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
 {% endblock %}
+
