--- a/records/templates/records/product_list.html
+++ b/records/templates/records/product_list.html
@@ -14,7 +14,9 @@
                 <th>Name</th>
                 <th>Category</th>
                 <th>Quantity</th>
-                <th>Price</th>
+                <th>Price Bought</th>
+                <th>Sell Price</th>
+                <th>Actions</th>  <!-- Add Actions column -->
             </tr>
         </thead>
         <tbody>
@@ -24,11 +26,16 @@
                     <td>{{ product.name }}</td>
                     <td>{{ product.category }}</td>
                     <td>{{ product.quantity_available }}</td>
+                    <td>{{ product.price_bought }}</td>
                     <td>{{ product.price }}</td>
+                    <td>
+                        <a href="{% url 'edit_product' product.pk %}">Edit</a> |  <!-- Edit Product link -->
+                        <a href="{% url 'delete_product' product.pk %}">Delete</a>  <!-- Delete Product link -->
+                    </td>
                 </tr>
             {% empty %}
                 <tr>
-                    <td colspan="4">No products available</td>
+                    <td colspan="7">No products available</td>
                 </tr>
             {% endfor %}
         </tbody>
