--- a/records/templates/home.html
+++ b/records/templates/home.html
@@ -3,6 +3,8 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to My Shop</h1>
-<!-- Add any additional content for the home page -->
+<div class="container">
+    <h1 class="mb-4">Welcome to My Shop</h1>
+    <!-- Add any additional content for the home page -->
+</div>
 {% endblock %}
