--- a/records/templates/records/record_expense.html
+++ b/records/templates/records/record_expense.html
@@ -5,11 +5,17 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Record Expense</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Record Expense</button>
-    </form>
-    <a href="{% url 'daily_summary' %}">View Daily Summary</a>
+<div class="container">
+    <h1 class="text-center">Record Expense</h1>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary btn-block">Record Expense</button>
+            </form>
+            <a href="{% url 'daily_summary' %}" class="btn btn-secondary btn-block mt-3">View Daily Summary</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
