--- a/records/templates/records/reservation_list.html
+++ b/records/templates/records/reservation_list.html
@@ -5,7 +5,8 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Reservation List</h1>
+<div class="container">
+    <h1 class="mb-4">Reservation List</h1>
     <a href="{% url 'register_reservation' %}" class="btn btn-primary mb-3">Add Reservation</a>
     <table class="table">
         <thead>
@@ -33,4 +34,5 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
