--- a/records/templates/records/sale_success.html
+++ b/records/templates/records/sale_success.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Sale Recorded{% endblock %}
+{% block title %}
+    Sale Recorded
+{% endblock %}
 
 {% block content %}
-<h1>Sale Recorded Successfully!</h1>
-<!-- Add any additional content for the success page -->
+<div class="container">
+    <h1 class="mb-4">Sale Recorded Successfully!</h1>
+    <!-- Add any additional content for the success page -->
+</div>
 {% endblock %}
