--- a/records/templates/records/add_product.html
+++ b/records/templates/records/add_product.html
@@ -5,10 +5,12 @@
 {% endblock %}
 
 {% block content %}
-<h2>Add Product</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+<div class="container">
+    <h2 class="mb-4">Add Product</h2>
+    <form method="post" class="col-md-6">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Save</button>
+    </form>
+</div>
 {% endblock %}
