--- a/records/templates/records/add_reservation_payment.html
+++ b/records/templates/records/add_reservation_payment.html
@@ -5,10 +5,12 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Add Reservation Payment</h1>
-    <form method="post">
+<div class="container">
+    <h2 class="mb-4">Add Reservation Payment</h2>
+    <form method="post" class="col-md-6">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+</div>
 {% endblock %}
