--- a/records/templates/records/edit_product.html
+++ b/records/templates/records/edit_product.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Product</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+    {% block title %}
+        Edit Product
+    {% endblock %}
+    
+    {% block content %}    
     <h1>Edit Product</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Submit</button>
     </form>
-</body>
-</html>
+    {% endblock %}
+
