--- a/records/templates/records/product_detail.html
+++ b/records/templates/records/product_detail.html
@@ -5,10 +5,20 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{ product.name }}</h1>
-    <p>Description: {{ product.description }}</p>
-    <p>Price: Tsh{{ product.price }}</p>
-    <p>Quantity Available: {{ product.quantity_available }}</p>
-    <p>Category: <a href="{% url 'category_detail' product.category.pk %}">{{ product.category.name }}</a></p>
-    <a href="{% url 'product_list' %}">Back to Products</a>
+<div class="container">
+    <h1 class="text-center">{{ product.name }}</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <p><strong>Description:</strong> {{ product.description }}</p>
+            <p><strong>Price:</strong> Tsh{{ product.price }}</p>
+            <p><strong>Quantity Available:</strong> {{ product.quantity_available }}</p>
+            <p><strong>Category:</strong> <a href="{% url 'category_detail' product.category.pk %}">{{ product.category.name }}</a></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <a href="{% url 'product_list' %}" class="btn btn-primary">Back to Products</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
