--- a/records/templates/records/register_reservation.html
+++ b/records/templates/records/register_reservation.html
@@ -5,10 +5,16 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Register Reservation</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+<div class="container">
+    <h1 class="text-center">Register Reservation</h1>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
