--- a/records/templates/records/add_product.html
+++ b/records/templates/records/add_product.html
@@ -1,16 +1,49 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 
 {% block title %}
     Add Product
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h2 class="mb-4">Add Product</h2>
-    <form method="post" class="col-md-6">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Save</button>
-    </form>
+<div class="mb-1 container">
+    <h2 class="mb-1 text-center">Add Product</h2>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form method="post" class="mt-4">
+                {% csrf_token %}
+                {{ form.non_field_errors }}
+                <div class="form-group mb-3">
+                    <label for="{{ form.name.id_for_label }}">Product Name:</label>
+                    {{ form.name|add_class:"form-control form-control-sm" }}
+                </div>
+                <div class="form-group mb-3">
+                    <label for="{{ form.description.id_for_label }}">Description:</label>
+                    {{ form.description|add_class:"form-control form-control-sm"|attr:"style:max-height:40px;resize:none;" }}
+                </div>
+                <div class="form-group mb-3">
+                    <label for="{{ form.price.id_for_label }}">Selling price:</label>
+                    {{ form.price|add_class:"form-control form-control-sm" }}
+                </div>
+                <div class="form-group mb-3">
+                    <label for="{{ form.price_bought.id_for_label }}">Price Bought:</label>
+                    {{ form.price_bought|add_class:"form-control form-control-sm" }}
+                </div>
+                <div class="form-group mb-3">
+                    <label for="{{ form.quantity_available.id_for_label }}">Quantity Available:</label>
+                    {{ form.quantity_available|add_class:"form-control form-control-sm" }}
+                </div>
+                <div class="form-group mb-3">
+                    <label for="{{ form.category.id_for_label }}">Category:</label>
+                    {{ form.category|add_class:"form-control form-control-sm" }}
+                </div>
+                <div class="form-group mb-3">
+                    <label for="{{ form.minimum_quantity.id_for_label }}">Minimum Quantity:</label>
+                    {{ form.minimum_quantity|add_class:"form-control form-control-sm" }}
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
