--- a/records/templates/records/add_category.html
+++ b/records/templates/records/add_category.html
@@ -5,12 +5,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h2 class="mb-4">Add Category</h2>
-    <form method="post" class="col-md-6">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Save</button>
-    </form>
-</div>
+<h2>Add Category</h2>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Save</button>
+</form>
 {% endblock %}
