--- a/records/templates/records/category_list.html
+++ b/records/templates/records/category_list.html
@@ -1,17 +1,38 @@
 {% extends 'base.html' %}
 
-{% block title %}Categories{% endblock %}
+{% block title %}
+    Categories
+{% endblock %}
 
 {% block content %}
 <div class="container">
     <h1>Categories</h1>
-    <ul class="list-group">
-        {% for category in categories %}
-            <li class="list-group-item"><a href="{% url 'category_detail' category.id %}">{{ category.name }}</a></li>
-        {% empty %}
-            <li class="list-group-item">No categories available</li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'add_category' %}" class="btn btn-primary mt-3">Add Category</a>
+    <a href="{% url 'add_category' %}" class="btn btn-primary mb-3">Add Category</a>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th>Name</th>
+                <th>Number of Products</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for category in categories %}
+                <tr>
+                    <td>{{ category.name }}</td>
+                    <td>{{ category.products.count }}</td>
+                    <td>
+                        <a href="{% url 'category_detail' category.id %}" class="btn btn-info btn-sm">View</a>
+                        <a href="{% url 'edit_category' category.id %}" class="btn btn-primary btn-sm">Edit</a>
+                        <a href="{% url 'delete_category' category.id %}" class="btn btn-danger btn-sm">Delete</a>
+                    </td>
+                </tr>
+            {% empty %}
+                <tr>
+                    <td colspan="3">No categories available</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
